# AI-Driven-Applicant-Selection-Tool-for-LSETF-PLP-Nigeria-Hackathon

./: .gitignore  README.md  docker-compose.yml
ai-engine/processing/: document_parser.py
ai-engine/scoring/: algorithm.py
backend/: .flake8  .pylintrc  Dockerfile  pyproject.toml  requirements.txt  setup.py
backend/app/: database.py  main.py
backend/app/api/: analytics.py  candidates.py  settings.py
backend/app/services/: ai_processor.py
backend/app/utils/: document_parser.py  scoring_algorithm.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/components/: Analytics.jsx  CandidateList.jsx  Dashboard.jsx  FileUpload.jsx  SettingsPanel.jsx
scripts/: setup.sh
